# klecks-tauri

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
examples/embed/: example.html
scripts/: sync-version.js
scripts/intune/: detect.ps1  install.ps1  uninstall.ps1
src/: embed.ts  help.html  index.html  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: declaration.d.ts
src/app/fonts/: font-licenses.ts  fonts.ts
src/app/script/: main-embed.ts  main-standalone.ts
src/app/script/app/: console-api.ts  kl-app-import-handler.ts  kl-app-select.ts  kl-app.ts
src/app/script/bb/: bb-types.ts  bb.ts
src/app/script/bb/base/: base.ts  bb-log.ts  browser.ts  c.ts  canvas.ts  debug-out.ts  (+7 more)
src/app/script/embed/: embed-toolspace-top-row.ts
src/app/script/fx-canvas/: fx-canvas-types.ts  fx-canvas.ts  shared-fx.ts
src/app/script/klecks/: kl-config.ts  kl-types.ts  kl.ts
src/app/script/language/: language.ts
src/app/script/polyfills/: polyfills-nomodule.ts  polyfills.ts
src/app/script/tauri/: tauri-bridge.ts
src/app/script/theme/: theme.ts
src/app/style/: dark.scss  embed.scss  style.scss
src/languages/: _base-en.json5  de.json5  es.json5  fi.json5  fr.json5  generate.js  hu.json5  id.json5  ja.json5  jv.json5  ko.json5  languages.json  lv.json5  nl.json5  pt-BR.json5  ru.json5  su.json5  sv.json5  zh-CN.json5  zh-TW.json5
(+289 files in other folders)
